{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "d5c0086d-794a-439f-ad02-131bb2110d01",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "27fe8ddc-7226-4087-b525-0d9a77a8317b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "fc5e178c-eddb-4f5d-b86b-91bbcfb85ec4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2c2893f9-5481-4caa-8209-aec5fe5a9f0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartClimb",
                    "type": "Button",
                    "id": "84492d61-a00d-4a19-9e6f-e200dfe25f51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "73071fa1-3cf4-4b69-96d9-fc74af94d563",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "02e759f2-0346-40b7-b797-1a3080617909",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "25dbb6f5-8fe4-418c-8fd3-1745e36fb545",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "JoyStick",
                    "id": "2461e2e0-e3fc-4454-95a7-248e8c33e86e",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "0d87f033-5dad-471d-bb38-37e7ac286912",
                    "path": "<Joystick>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "f5290a92-65a6-414f-971d-2a45dac86b6b",
                    "path": "<Joystick>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "762eb23f-457f-4af1-82b0-e0be942d0bfb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4db35f98-3a07-48ce-bcd3-38f26da777cc",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a3d2710b-812e-430d-8136-c6b514666023",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "27e2debb-d288-4f6a-a895-e8c067f0978e",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1d82aba-6137-49d9-8f27-efdbe9f06b0a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07c22213-b63c-47af-a999-405d3f147d02",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartClimb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7cbb6a5-02ff-425a-87df-323794b016c7",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartClimb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Climb",
            "id": "60126e77-69cb-4e45-9c23-b321aaefe5d6",
            "actions": [
                {
                    "name": "Climb",
                    "type": "Value",
                    "id": "f4591a0b-ac36-4d41-9ea8-482280dc168e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "bc6c0ec5-cce8-4c0f-84ad-658e0f69cdbb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7cf6324a-7306-49ae-a509-ebc8fa3dad9e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "34b79b38-288f-46c8-ae20-1334279aa377",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a186a0f0-ea77-4e63-b21e-5b03e99f4cd3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4b7c89c7-3121-44f8-9a80-3a4a1b2f348c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "f42c5b72-8be0-459b-80eb-67600836a9b2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5cbf80c8-fb91-4a22-a1d4-cbadc5dbe2ff",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d61995ba-2825-4dec-9fc2-2708482bce8a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f8f8ab7c-1d2d-4465-acc1-0cc085586b7b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c0eb09a7-ebdf-4846-ab71-c75286f03aee",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}